--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
             <version>20180813</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
